--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -32,7 +32,7 @@ html {
 }
 
 body {
-  background-image: url("/media/P1010552.jpg");
+  background-image: url("/src/media/background.gif");
   background-size: contain;
 }
 
