--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -33,14 +33,17 @@ html {
 
 body {
   background-image: url("/src/media/background.gif");
-  background-size: contain;
+  background-size: auto;
+
+  background-attachment: fixed;
+  background-position: center;
 }
 
 h1 {
   font-size: 3rem;
 }
 h2 {
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
 h3 {
   font-size: 1.5rem;
