--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -29,7 +29,7 @@
 
     padding: 10px;
     width: 35px;
-    background-color: rgba(0, 0, 0, 0.8);
+
     color: white;
     font-size: 18px;
   }
@@ -93,11 +93,12 @@
   a {
     font-size: 3rem;
     font-weight: 700;
+    color: white;
     text-transform: uppercase;
     margin: 1.5rem 0;
   }
   a:hover {
-    color: white;
+    color: $anthrazit;
   }
 }
 
@@ -111,7 +112,7 @@
   padding: 10px;
   border-radius: 10px;
   cursor: pointer;
-  background-color: rgba(0, 0, 0, 0.8);
+
   @include flexLayout(space-between, flex-end);
   flex-direction: column;
   overflow: hidden;
