--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -19,7 +19,7 @@
   display: flex;
   text-align: left;
   width: 100%;
-  top: 5%;
+  top: 19px;
   left: 2%;
 
   a {
@@ -104,7 +104,7 @@
 
 .menu {
   z-index: 1000;
-  top: 5%;
+  top: 19px;
   right: 2%;
   position: fixed;
   height: 43px;
