--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -33,7 +33,7 @@ html {
 
 body {
   background-image: url("/src/media/background.gif");
-  background-size: auto;
+  background-size: 100% 100%;
 
   background-attachment: fixed;
   background-position: center;
