--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -161,3 +161,141 @@
     background-color: black;
   }
 }
+
+.dsbutton {
+  background-color: black;
+  color: white;
+  font-size: 3rem;
+  border: 0;
+  text-transform: uppercase;
+  margin-top: 10px;
+  cursor: pointer;
+
+  &:hover {
+    color: $anthrazit;
+  }
+}
+
+/*DATENSCHUTZ*/
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+.modal {
+  h1 {
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-style: bold !important;
+    font-size: 30px;
+
+    font-weight: 700;
+    margin-bottom: 10px;
+    margin-top: 25px;
+  }
+  h2 {
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-size: 25px;
+    font-style: bold !important;
+    font-weight: 700;
+    margin-bottom: 10px;
+    margin-top: 20px;
+  }
+  h3 {
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-style: bold !important;
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    margin-top: 15px;
+  }
+  h4 {
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-style: bold !important;
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+  p {
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-size: 14px;
+    line-height: 1.5;
+    margin-bottom: 10px;
+  }
+  li {
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-size: 14px;
+    line-height: 1.5;
+    margin-bottom: 10px;
+  }
+  a {
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-size: 14px;
+    line-height: 1.5;
+    margin-bottom: 10px;
+    color: blue;
+  }
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: auto;
+  width: 100%;
+
+  transform: scale(0);
+  transition: 50ms ease-in-out;
+  border: 1px solid black;
+
+  z-index: 3000;
+  background-color: white;
+}
+
+.modal.active {
+  transform: scale(1);
+}
+
+.modal-header {
+  padding: 10px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid black;
+}
+
+.modal-header .title {
+  font-size: 3.25rem;
+  font-weight: bold;
+}
+
+.modal-header .close-button {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 2.25rem;
+  font-weight: bold;
+}
+
+.modal-body {
+  padding: 10px 15px;
+}
+
+#overlay {
+  position: fixed;
+  opacity: 0;
+  transition: 200ms ease-in-out;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 1);
+  pointer-events: none;
+}
+
+#overlay.active {
+  opacity: 1;
+  pointer-events: all;
+}
