--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -65,6 +65,7 @@
 
 .section-4 {
   height: 100vh;
+  text-align: center;
 
   background: rgba($light-grey, 0.75);
   padding-top: 6rem;
@@ -78,6 +79,15 @@
   }
 
   li {
+    font-size: 2rem;
+  }
+
+  .email-container {
+    width: 50%;
+    align-items: center;
+    padding: 3rem;
+  }
+  a {
     font-size: 2rem;
   }
 }
@@ -122,4 +132,86 @@
   right: 0;
   bottom: 0;
   z-index: -1;
+}
+
+.datenschutz {
+  transform: scale(0);
+
+  .change {
+    transform: scale(1);
+    transition: 200ms ease-in-out;
+  }
+
+  h1 {
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-style: bold !important;
+    font-size: 30px;
+
+    font-weight: 700;
+    margin-bottom: 10px;
+    margin-top: 25px;
+  }
+  h2 {
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-size: 25px;
+    font-style: bold !important;
+    font-weight: 700;
+    margin-bottom: 10px;
+    margin-top: 20px;
+  }
+  h3 {
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-style: bold !important;
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    margin-top: 15px;
+  }
+  h4 {
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-style: bold !important;
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+  p {
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-size: 14px;
+    line-height: 1.5;
+    margin-bottom: 10px;
+  }
+  a {
+    font-family: Arial, Helvetica, sans-serif !important;
+    font-size: 14px;
+    line-height: 1.5;
+    margin-bottom: 10px;
+    color: yellow;
+  }
+
+  top: 0;
+  text-align: justify;
+  padding: 5rem;
+
+  left: 0;
+  right: 0;
+  height: auto;
+
+  z-index: 3000;
+  position: absolute;
+  background-color: black;
+  color: white;
+}
+
+.footer {
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  color: white;
+  flex-direction: row;
+  vertical-align: middle;
+  a {
+    cursor: pointer;
+  }
 }
