--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -72,7 +72,7 @@
 
 .email-container {
   margin: 15rem auto;
-  width: 50rem;
+  max-width: 90%;
   overflow: hidden;
 
   h1 {
@@ -93,7 +93,7 @@
     transition: 0.5s ease-in;
   }
   a:hover {
-    font-size: 3rem;
+    font-size: 2.5rem;
     color: white;
   }
 }
