--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -320,3 +320,23 @@
   opacity: 1;
   pointer-events: all;
 }
+
+.video-container {
+  z-index: -10000;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.video-container video {
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
