--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -34,11 +34,16 @@
 }
 
 
-.wrapper { 
-  border : 2px solid #000; 
-  overflow:hidden;
+.wrapper {
+  overflow: hidden;
   padding: 10px;
   margin: 2%;
+  display: flex;
+  flex-direction: row;
+  flex-basis: 80%;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .wrapper div {
