--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -72,8 +72,10 @@ display: none !important }
     background-color: white;
     color: black;
   }
+}
 
-
+a.nav-point {
+  top: -150px;
 }
 
 .icon-bar-2 {
@@ -117,19 +119,17 @@ display: none !important }
 }
 
 .yt-video {
-  position: relative;
-  height: 800px;
-  width: 80%;
-
-  margin: 1.5rem;
-  z-index: 1;
+	position: relative;
+  scroll-snap-stop: always;
+	padding-bottom: 56.25%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 100px;
+	z-index: 1;
 
   iframe {
     border: 1rem double black;
-    @include flexLayout(space-around);
-    flex-direction: column;
     position: absolute;
-
     width: 100%;
     height: 100%;
     top: 0;
