--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -5,8 +5,8 @@
 
 /* Create four equal columns */
 .column {
-  flex: 25%;
-  padding: 5rem;
+  flex: 1;
+  padding: 2rem;
 }
 
 /* On screens that are 992px wide or less, go from four columns to two columns */
@@ -40,7 +40,6 @@
   margin: 2%;
   display: flex;
   flex-direction: row;
-  flex-basis: 80%;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
@@ -64,6 +63,7 @@
   border:2px dashed #ccc;
   min-height:170px;
   padding-top: 10%;
+  max-width: 435px;
 }
 
 @media screen and (max-width: 600px) {
@@ -78,14 +78,20 @@
 
 
 .section-2 {
-  height: 100vh;
-  min-height: 680px;
-  background: rgba(252, 3, 219, 0.8);
-  @include flexLayout(space-between);
-  flex-direction: column;
-  padding: 5rem 0;
-  border-top: 5px dotted black;
-  border-bottom: 5px dotted black;
+	display: block;
+	text-align: center;
+	background: rgba(252,3,219,0.8);
+	padding: 10%;
+	border-top: 5px dotted black;
+	border-bottom: 5px dotted black;
+	height: auto;
+
+  h2 {
+    margin-bottom: 20px;
+  }
+  h2:nth-child(1){
+    margin-top: 5%;
+  }
 }
 
 .section-3 {
@@ -108,18 +114,22 @@
     font-size: 1.5rem;
     line-height: 2rem;
     text-align: center;
+    margin: 20px;
+    cursor: default;
   }
 }
 
 .section-4 {
-  height: 100vh;
-  text-align: center;
-  background: rgba($light-grey, 0.75);
-  padding-top: 6rem;
+	height: 100vh;
+	text-align: center;
+	background: rgba(217,217,217,0.75);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 .email-container {
-  margin: 15rem auto;
+  margin: 5rem auto;
   max-width: 90%;
   overflow: hidden;
 
